2003-03-28  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-view.c (fm_list_view_click_policy_changed):
	Use the FMDirectoryView click_policy_changed instead of our own.
	
2003-03-28  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-icon-view.c (fm_icon_view_class_init):
	Sort directory_view_class initializers

	* src/file-manager/fm-list-view.c:
	Implement reveal_selection() for FMDirectoryView

2003-03-27  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-dnd.c:
	Tune AUTOSCROLL_TIMEOUT_INTERVAL and AUTO_SCROLL_MARGIN so that
	auto-scrolling is easier to trigger.

2003-03-27  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-model.c (fm_list_model_get_value):
	Scale icons to fit in row-height.

2003-03-27  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-view.c (fm_list_view_start_renaming_file): 
	* libnautilus-private/nautilus-icon-container.c (nautilus_icon_container_start_renaming_selected_item):
	Use eel_filename_get_rename_region for both list and icon view to
	get the initial region to select on rename.
	
2003-03-27  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-window.h: 
	* src/nautilus-window.c: 
	* src/nautilus-window-menus.c:
	Don't save the location bar enabled prefs when showing it
	temporarily.

2003-03-27  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-view.c:
	Keyboard shortcuts for context menu.
	Don't eat CTRL-Space, that means we can't multiple-select.

2003-03-27  Alexander Larsson  <alexl@redhat.com>

	* docs/key_mouse_navigation.txt:
	Update keynav docs.
	
	* libnautilus-private/nautilus-icon-private.h:
	* libnautilus-private/nautilus-icon-container.c:
	(button_release_event), (motion_notify_event), (key_press_event),
	(handle_icon_button_press), (has_multiple_selection),
	(has_selection):
	Don't do context menu on middle button.
	Shift-F10 gives directory context menu if no selection